SFUSA/force-app/main/default/objects/CustomStoreGroup__c/fields/Added_Date__c.field-meta.xml
<CustomField>
        <fullName>Added_Date__c</fullName>
        <label>Added Date</label>
        <type>Date</type>
    </CustomField>