SFUSA/force-app/main/default/objects/CustomStoreGroup__c/fields/StoreID__c.field-meta.xml
<CustomField>
        <fullName>StoreID__c</fullName>
        <externalId>true</externalId>
        <label>Store ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>