SFUSA/force-app/main/default/objects/CustomStoreGroup__c/fields/Territory__c.field-meta.xml
<CustomField>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>