SFUSA/force-app/main/default/objects/CustomStoreGroup__c/fields/Type__c.field-meta.xml
<CustomField>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>